[package]
name = "ostdl"
version = "0.9.1"
authors = ["Istvan Szekeres <szekeres@iii.hu>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/Pistahh/ostdl"
repository = "https://github.com/Pistahh/ostdl"
keywords = [ "opensubtitles", "subtitle" ]
categories = [ "command-line-utilities" ]
description = """
ostdl, a downloader for opensubtitles.org
"""

[dependencies]
clap = "2.27.1"
reqwest = "0.8.1"
xmlrpc = "0.9.0"
libflate = "0.1.11"
